--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>4</version>
+    </parent>
     <groupId>de.sigmalab.maven.plugins</groupId>
     <artifactId>redis-maven-plugin</artifactId>
     <version>0.9.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
+    <description>Redis-Maven-Plugin</description>
+    <url>https://github.com/sigmalab-projects/redis-maven-plugin</url>
 
     <properties>
         <maven.version>3.2.1</maven.version>
@@ -233,6 +240,8 @@
                 <artifactId>maven-scm-plugin</artifactId>
                 <version>1.9</version>
                 <configuration>
+                    <username>jbellmann</username>
+                    <connectionType>developerConnection</connectionType>
                     <tag>v${project.version}</tag>
                 </configuration>
             </plugin>
@@ -302,4 +311,15 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
+    <scm>
+        <url>https://github.com/sigmalab-projects/redis-maven-plugin</url>
+        <connection>scm:git:https://github.com/sigmalab-projects/redis-maven-plugin.git</connection>
+        <developerConnection>scm:git:https://github.com/sigmalab-projects/redis-maven-plugin.git</developerConnection>
+    </scm>
+    
+    <issueManagement>
+        <system>GitHub Issue Tracking</system>
+        <url>https://github.com/sigmalab-projects/redis-maven-plugin/issues</url>
+    </issueManagement>
 </project>
