set up new distribution-repository on bintray

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -292,7 +293,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore />
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
@@ -324,9 +325,9 @@
 
     <distributionManagement>
         <repository>
-            <id>bintray-one-releases-redis-maven-plugin</id>
-            <name>one-releases-redis-maven-plugin</name>
-            <url>https://api.bintray.com/maven/one/releases/redis-maven-plugin</url>
+            <id>bintray-sigmalab-maven-releases-redis-maven-plugin</id>
+            <name>sigmalab-maven-releases-redis-maven-plugin</name>
+            <url>https://api.bintray.com/maven/sigmalab/maven-releases/redis-maven-plugin</url>
         </repository>
     </distributionManagement>
 </project>
