--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.9.1</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -295,6 +294,21 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
+	            <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-javadoc-plugin</artifactId>
+	                <version>2.10.3</version>
+	                <configuration>
+	                    <breakiterator>true</breakiterator>
+	                    <header>${project.name}</header>
+	                    <source>${source.level}</source>
+	                    <quiet>true</quiet>
+	                    <additionalparam>-Xdoclint:none</additionalparam>
+	                    <links>
+	                        <link>http://docs.oracle.com/javase/7/docs/api</link>
+	                    </links>
+	                </configuration>
+	            </plugin>
             </plugins>
         </pluginManagement>
     </build>
