--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.sigmalab.maven.plugins</groupId>
     <artifactId>redis-maven-plugin</artifactId>
-    <version>0.9.2</version>
+    <version>0.9.3-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     <description>Redis-Maven-Plugin</description>
     <url>https://github.com/sigmalab-projects/redis-maven-plugin</url>
